# vagrant

./: .gitignore  .project  readme.txt
00_TMP_ACCESS/: Vagrantfile
2015_jenkins/: Vagrantfile  install_jenkins.sh
2016-onebox-agent/: Vagrantfile  install_WEB.sh
2016-onebox-dhcp-server/: Vagrantfile  install_DHCP_Server.sh
2016-onebox-staging/: Vagrantfile  install_DB.sh  install_E2E.sh  install_ORCH.sh  install_WEB.sh  install_WEB1.sh  install_WEB2.sh  install_ZBX.sh
2016-onebox-websock/: Vagrantfile  account.sh  install_WEB.sh
2016-roadshow/: Vagrantfile  install_WEB.sh
2016-with-simulate/: Vagrantfile  install_NODE05.sh  install_NODE06.sh  install_NODE07.sh  install_NODE08.sh  install_NODE30.sh
2016-xMS/: Vagrantfile  install_DB.sh
Base/: Vagrantfile
Base-Host/: Vagrantfile
Bonding/: Vagrantfile  init_node_NODE1.sh  init_node_NODE2.sh
CentOS/: Vagrantfile
GO_01/: Vagrantfile  init_node_ACCS-SW.sh  init_node_AGGR-SW.sh  init_node_ALL-ONE.sh  init_node_CORE-SW.sh  init_node_CUSTOM.sh  init_node_MGMT-SW.sh  init_node_ORCH.sh  init_node_PUBLIC.sh  init_node_SERVER.sh  init_node_STOR-SW.sh  readme.txt
GO_HW_UTM_BACKUP/: Vagrantfile  init_node_DB-SERV.sh  init_node_ORCH.sh
MultiSwitch/: Vagrantfile  init_node_HYBRID_SW.sh  init_node_MGMT_SW.sh  init_node_NODE2.sh
NonSDNSW-Mng/: Vagrantfile
OpenStack-1st/: Vagrantfile  init_node_C-NODE-1.sh  init_node_CTRL.sh  init_node_SVC-SW.sh  init_node_VNF-SW.sh
OpenvSwitch/: Vagrantfile  init_node_NODE1.sh  (+2 more)
one-box/pkg/: .project  PKG-INFO  README  requirements.txt  setup.cfg  setup.py
(+492 files in other folders)
