[metadata]
name = onebox_agent
author = Namgon Kim
author-email = ng.kim@kt.com
summary = OneBox Agent
description-file = README
home-page = http://www.kt.com/
license = Apache-2
classifier =
    Development Status :: 1 - Alpha
        Environment :: Console
        Environment :: OpenStack
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: Ubuntu
        Operating System :: Ubuntu :: 14.04
        Programming Language :: Python
        Programming Language :: Python :: 2
        Programming Language :: Python :: 2.7
keywords =
    setup
    distutils

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    etc/onebox =
        etc/onebox-agent.conf

[entry_points]
console_scripts =
    onebox-agent = onebox_agent.obagent:main

